fixed overflow in mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+body {
+  overflow: hidden;
+}
 .--hover:hover {
   transform: scale(1.05);
   transition: all 0.1s ease-in-out;
